# OS_IDZ_4

./: 4-5_c  4-5_s  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  lib.cpp  lib.h  rtwert  terygre  test  testtewqt  tretre
4-5/: client.cpp  server.cpp
6-7/: server.cpp
6-7-8/: client.cpp  observer.cpp  server.cpp
9-10/: client.cpp  server.cpp
